# ApacheMiner

./: .gitignore  Dockerfile  README.md  noxfile.py  pyproject.toml
.github/workflows/: nox.yml
mining_repos/: apache_projects_commits_final.csv  repos_sachi_nonreverse.txt  repos_sachi_nonreverse_copy.txt  repos_sachi_reversable.txt  run_discriminator_beforeafter.py  run_discriminator_commitseq.py  write_repos.py
src/: MergeFinder.py  __main__.py  apache_list.py  binder.py  discriminator.py  driller.py  driver.py  git_progress.py  github.py  project.py  squash_reverse.py  transaction.py  visualizer.py
src/binding/: _repository.py  file_types.py  graph.py  import_strategy.py  name_strategy.py  repository.py  strategy.py
src/custom_types/: commit.py
src/discriminators/: LLM_discriminator.py  align.py  before_after_discriminator.py  before_same_after_discriminator.py  branch_discriminator.py  commit_seq_discriminator.py  commit_sequence_discriminator.py  discriminator.py  factory.py  file_types.py  transaction.py  types.py
src/discriminators/binding/: factory.py  file_types.py  graph.py  import_strategy.py  name_strategy.py  repository.py  strategy.py
src/discriminators/binding/repositories/: factory.py  java.py  python.py  repository.py
src/discriminators/binding/repositories/languages/: factory.py  java.py  language.py  python.py
src/spmf/: __init__.py  association.py
src/types/: commit.py
tests/: test_github_parsing.py  test_spmf.py  test_time_series.py  test_transform.py
tests/data/: shuffled_commits.txt
tests/discriminators/: test_before_after_discriminator.py  test_commit_sequence.py
tests/strategies/: test_import_strategy.py
