[tool.poetry]
name = "apacheminer"
version = "0.1.0"
description = "COMP0104: Software Development Practice Coursework 2, which investigates the evidence that projects are adopting Test-First or Test-Driven Approach and how strictly they follow the practice."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]
package-mode = true 

[tool.poetry.dependencies]
python = "^3.12"
pydriller = "^2.7"
rich = "^13.9.4"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mine = "src.__main__:mine"
analyze = "src.__main__:analyze"
