[tool.poetry]
name = "apacheminer"
version = "0.1.0"
description = "COMP0104: Software Development Practice Coursework 2, which investigates the evidence that projects are adopting Test-First or Test-Driven Approach and how strictly they follow the practice."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]
package-mode = true 

[tool.poetry.dependencies]
python = "^3.12"
pydriller = "^2.7"
rich = "^13.9.4"
click = "^8.1.7"
selenium = "^4.26.1"
bs4 = "^0.0.2"
types-beautifulsoup4 = "^4.12.0.20241020"
requests = "^2.32.3"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
scipy = "^1.14.1"
gitpython = "^3.1.43"
pydantic = "^2.10.4"
python-dotenv = "^1.0.1"
pygithub = "^2.5.0"
openai = "^1.58.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
nox = "^2024.10.9"
pylint = "^3.3.1"
pytest = "^8.3.3"
hypothesis = "^6.119.3"
mypy = "^1.13.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fetch = "src.__main__:fetch"
analyze = "src.__main__:analyze"
cli = "src.__main__:cli"

[tool.black]
line-length = 88

[tool.mypy]
disable_error_code = "import-untyped"

[tool.isort]
profile = "black"
